feat(compact): add auto compaction for working memory